--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,21 @@
 ### Habilitar acesso ao H2 Console
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 ### Definir configurações do H2
-#spring.datasource.platform=h2
-#spring.datasource.url=jdbc:h2:file:~/test
-#spring.datasource.username=sa
-#spring.datasource.password=
+spring.datasource.platform=h2
+spring.datasource.url=jdbc:h2:file:~/test
+spring.datasource.username=sa
+spring.datasource.password=
 
-#spring.jpa.hibernate.ddl-auto=create
-#spring.datasource.driver-class-name=org.h2.Driver
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.url=jdbc:mysql://localhost:3306/entra21
-spring.datasource.username=root
-spring.datasource.password=aluno
 spring.jpa.hibernate.ddl-auto=create
+spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#MySQL
+#spring.datasource.url=jdbc:mysql://localhost:3306/entra21
+#spring.datasource.username=root
+#spring.datasource.password=aluno
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
