--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,8 @@ spring.datasource.url=jdbc:h2:file:~/test
 spring.datasource.username=sa
 spring.datasource.password=
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
+#create
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
